# PINTimpact

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
run/: run.py  (+91 more)
src/: .syntastic_cpp_config  CMakeLists.txt  Makefile  Makefile.export.Belos  Makefile.export.NOX  Makefile.export.Teuchos  compile
src/src_c/: BelosPimpactAdapter.hpp  CMakeLists.txt  NOX_PIMPACT_Vector.cpp  NOX_PIMPACT_Vector.hpp  NOX_Pimpact_Group.hpp  NOX_Pimpact_Interface.hpp  NOX_Pimpact_Vector.hpp  Pimpact_BoundaryConditions.hpp  Pimpact_CompoundField.hpp  Pimpact_ConvDiff.cxx  Pimpact_ConvDiff2.cxx  Pimpact_ConvDiffMG.cxx  Pimpact_ConvDiffMG2.cxx  Pimpact_DomainSize.hpp  Pimpact_FieldFactory.hpp  Pimpact_FieldSpace.hpp  Pimpact_GridSize.hpp  Pimpact_IndexSpace.hpp  Pimpact_LinSolverParameter.hpp  Pimpact_LinearProblem.hpp  Pimpact_ModeField.hpp  Pimpact_MultiField.hpp  Pimpact_Operator.hpp  Pimpact_OperatorBase.hpp  Pimpact_OperatorFactory.hpp  Pimpact_OperatorMV.hpp  Pimpact_ProcGridSize.hpp  Pimpact_ScalarField.hpp  Pimpact_Stencil.hpp  Pimpact_Types.hpp  Pimpact_VectorField.hpp  analyzer3D.cxx  convDiff.cxx  convDiff2.cxx  convDiffMG.cxx  convDiffMG2.cxx  lap_lebl.cxx  mlguide.cxx  mlguide.hpp  mlguide_par.cxx  (+19 more)
src/src_c/BelosPimpact/: BelosPimpactAdapter.cpp  BelosPimpactAdapter.hpp  CMakeLists.txt  Pimpact_LinSolverParameter.cpp  Pimpact_LinSolverParameter.hpp  Pimpact_LinearProblem.cpp  Pimpact_LinearProblem.hpp
src/src_c/EigenSolver/: Pimpact_DivGradNullSpace.hpp  Pimpact_DivGradProjector.hpp  Pimpact_EmptyProjector.hpp  Pimpact_MHProjector.hpp  Pimpact_PicardProjector.hpp  Pimpact_SimpleVectorIteration.hpp
src/src_c/Fields/: CMakeLists.txt  Pimpact_AbstractField.hpp  Pimpact_AnalysisTools.hpp  Pimpact_CompoundField.cpp  Pimpact_CompoundField.hpp  Pimpact_FieldFactory.hpp  Pimpact_Fields.cpp  Pimpact_Fields.hpp  Pimpact_ModeField.cpp  Pimpact_ModeField.hpp  Pimpact_MultiField.cpp  Pimpact_MultiField.hpp  Pimpact_MultiHarmonicField.cpp  Pimpact_MultiHarmonicField.hpp  Pimpact_ScalarField.cpp  Pimpact_ScalarField.hpp  Pimpact_TimeField.cpp  Pimpact_TimeField.hpp  Pimpact_VectorField.cpp  Pimpact_VectorField.hpp  Pimpact_extern_ScalarField.hpp  Pimpact_extern_VectorField.hpp
src/src_c/Grid/: Pimpact_BoundaryConditionsGlobal.hpp  Pimpact_BoundaryConditionsLocal.hpp  Pimpact_CoordinatesGlobal.hpp  Pimpact_CoordinatesLocal.hpp  Pimpact_Domain.hpp  Pimpact_DomainSize.hpp  Pimpact_Grid.hpp  Pimpact_GridFactory.hpp  Pimpact_GridSizeGlobal.hpp  Pimpact_GridSizeLocal.hpp  Pimpact_IndexSpace.hpp  Pimpact_ProcGrid.hpp  Pimpact_ProcGridSize.hpp  Pimpact_StencilWidths.hpp  Pimpact_Utils.cpp  Pimpact_Utils.hpp
src/src_c/MultiGrid/: CMakeLists.txt  Pimpact_CoarsenStrategy.cpp  Pimpact_CoarsenStrategy.hpp  Pimpact_CoarsenStrategyGlobal.cpp  Pimpact_CoarsenStrategyGlobal.hpp  Pimpact_InterpolationMultiHarmonicOp.cpp  Pimpact_InterpolationMultiHarmonicOp.hpp  Pimpact_InterpolationOp.cpp  Pimpact_InterpolationOp.hpp  Pimpact_InterpolationTimeOp.hpp  Pimpact_MGFields.cpp  Pimpact_MGFields.hpp  Pimpact_MGGrids.hpp  Pimpact_MGOperators.cpp  (+20 more)
src/src_f/: CMakeLists.txt  alloc.f90  backup of usr_config.f90  cmod_ConvectionDiffusionOp.f90  cmod_ConvectionOp.f90  cmod_Coordinates.f90  cmod_DivGrav2ndOOp.f90  cmod_DivOp.f90  cmod_DtHelmholtzOp.f90  cmod_FDcoeff.f90  cmod_FieldSpace.f90  cmod_GradOp.f90  cmod_HelmholtzOp.f90  cmod_InterpolateV2SOp.f90  cmod_InterpolationOp.f90  cmod_Operator.f90  cmod_RelaxDivGradOp.f90  cmod_RestrictionFWOp.f90  cmod_RestrictionHWOp.f90  cmod_RestrictionOp.f90  cmod_SFinout.f90  cmod_ScalarField.f90  cmod_TimeNSOp.f90  cmod_TimeStokesOp.f90  cmod_TransferOp.f90  cmod_VectorField.f90  cmod_coeffs.f90  cmod_exchange.f90  cmod_geometry.f90  cmod_inout.f90  cmod_laplace.f90  cmod_setup.f90  cmod_solvers.f90  cmod_test.f90  cmod_write_info.f90  cusr_initcond.f90  impact.f90  mod_coeffs.f90  mod_diff.f90  mod_dims.f90  (+20 more)
src/src_impact/: CMakeLists.txt  backupmod_inout2.f90  cmod_DivOp.f90  cmod_FDcoeff.f90  cmod_FieldSpace.f90  cmod_HelmholtzOp.f90  cmod_Operator.f90  cmod_SFinout.f90  cmod_coeffs.f90  cmod_inout.f90  cmod_laplace.f90  cmod_setup.f90  cmod_solvers.f90  cmod_test.f90  cmod_write_info.f90  impact.f90  mod_coeffs.f90  mod_diff.f90  mod_helmholtz.f90  mod_laplace.f90  mod_lib.f90  mod_particles.f90  mod_rhs.f90  mod_setup.f90  mod_solvers.f90  mod_test.f90  mod_timeint.f90  mod_vars.f90  pimpact.hpp  sub_other.f90  usr_cinterface.f90  usr_config.f90  usr_imbound.f90  usr_vars.f90
src/test/: BelosPimpact_MVOP_test.cpp  BelosSolvesPimpact_test.cpp  CMakeLists.txt  NOXSolvesPimpact_test.cpp  NOX_Pimpact_Group_test.cpp  NOX_Pimpact_Interface_test.cpp  NOX_Pimpact_Vector_test.cpp  Pimpact_EigenSolver_test.cpp  Pimpact_Field_test.cpp  Pimpact_Grid_test.cpp  Pimpact_LapSolver_test.cpp  Pimpact_LinearProblem_test.cpp  Pimpact_ModeField_test.cpp  Pimpact_MultiField_test.cpp  Pimpact_MultiGridTime_test.cpp  Pimpact_MultiGrid_test.cpp  Pimpact_MultiHarmonicField_test.cpp  Pimpact_NonlinearOperator_test.cpp  Pimpact_Operator_test.cpp  Pimpact_ScalarField_test.cpp  Pimpact_Smoother_test.cpp  Pimpact_Solver_test.cpp  Pimpact_SpaceGrid_test.cpp  Pimpact_Test.hpp  Pimpact_TimeField_test.cpp  Pimpact_VectorField_test.cpp  Teuchos_StandardParallelUnitTestMain.cpp
test/: BelosPimpact_MVOP_test.cpp  BelosSolvesPimpactBC_test.cpp  BelosSolvesPimpact_test.cpp  CMakeLists.txt  NOXSolvesPimpact_test.cpp  NOX_Pimpact_Group_test.cpp  NOX_Pimpact_Interface_test.cpp  NOX_Pimpact_Vector_test.cpp  Pimpact_CompoundField_test.cpp  Pimpact_LinearProblem_test.cpp  Pimpact_ModeField_test.cpp  Pimpact_MultiField_ScalarMode_test.cpp  Pimpact_MultiField_Scalar_test.cpp  Pimpact_MultiField_VectorMode_test.cpp  Pimpact_MultiField_Vector_test.cpp  Pimpact_MultiField_test.cpp  Pimpact_MultiGrid_test.cpp  Pimpact_MultiHarmonicField_test.cpp  Pimpact_NonlinearOperator_test.cpp  Pimpact_Operator_test.cpp  Pimpact_ScalarField_test.cpp  Pimpact_ScalarModeField_test.cpp  Pimpact_SpaceGrid_test.cpp  Pimpact_Space_test.cpp  Pimpact_TimeField_test.cpp  Pimpact_VectorField_test.cpp  Pimpact_VectorModeField_test.cpp
(+255 files in other folders)
